--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,8 @@ html,body{
 
   background-color: #ddd;
 
+  perspective: 1800px;
+
   @at-root {
     .img-figure{
       position: absolute;
@@ -41,6 +43,14 @@ html,body{
       background-color: #fff;
 
       box-sizing:border-box;
+      cursor: pointer;
+      transform-origin: 0 50% 0;
+      transform-style: preserve-3d;
+      transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+
+      &.is-inverse {
+        transform: translate(320px) rotateY(180deg);
+      }
     }
 
     figcaption{
@@ -51,6 +61,32 @@ html,body{
 
         color: #a7a0a2;
         font-size: 16px;
+      }
+
+      .img-back{
+        position: absolute;
+        top: 0;
+        letf: 0;
+
+        width: 100%;
+        height: 100%;
+        padding: 50px 40px;
+        overflow: auto;
+
+        color: #a7a0a2;
+        font-size: 22px;
+        line-hight: 1.25;
+        text-align: left;
+
+        background-color: #fff;
+
+        box-sizing: borer-box;
+        transform: rotateY(180deg) translateZ(1px);
+        backface-visibility: hidden;
+      }
+
+      p {
+        margin: 0;
       }
     }
   }
