--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+@font-face{
+  font-family: "icons-turn-arrow";
+  src: url("../fonts/icons/turn-arrow.eot") format("embedded-opentype"),url("../fonts/icons/turn-arrow.woff") format("woff"),url("../fonts/icons/turn-arrow.ttf") format("truetype"),url("../fonts/icons/turn-arrow.svg") format("svg");
+}
+
 html,body{
   width: 100%;
   height: 100%;
@@ -42,12 +47,12 @@ html,body{
 
       background-color: #fff;
 
-      box-sizing:border-box;
+      box-sizing: border-box;
       cursor: pointer;
       transform-origin: 0 50% 0;
       transform-style: preserve-3d;
       transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
-
+      
       &.is-inverse {
         transform: translate(320px) rotateY(180deg);
       }
@@ -66,7 +71,7 @@ html,body{
       .img-back{
         position: absolute;
         top: 0;
-        letf: 0;
+        left: 0;
 
         width: 100%;
         height: 100%;
@@ -80,7 +85,7 @@ html,body{
 
         background-color: #fff;
 
-        box-sizing: borer-box;
+        box-sizing: border-box;
         transform: rotateY(180deg) translateZ(1px);
         backface-visibility: hidden;
       }
@@ -103,5 +108,47 @@ html,body{
   width: 100%;
 
   text-align: center;
+  @at-root{
+    .controller-unit{
+      display: inline-block;
+      margin: 0 5px;
+      width: 30px;
+      height: 30px;
+
+      text-align: center;
+      vertical-align: middle;
+
+      cursor: pointer;
+      background-color: #aaa;
+      border-radius: 50%;
+
+      transform: scale(0.5);
+      transition: transform .6s ease-in-out, background-color .3s;
+    
+
+      &.is-center{
+        background-color: #888;
+
+        transform: scale(1);
+
+        &::after{
+          color: #fff;
+          font-family: "icons-turn-arrow";
+          font-size: 80%;
+          line-height: 30px;
+
+          content:"\e600";
+
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+        }
+
+        &.is-inverse{
+          background-color: #555;
+          transform: rotateY(180deg);
+        }
+      }
+    }
+  }
 }
 /* controller -- end */
